<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="electric_car">Electric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preco</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="no_wifi">Ops, conexao com a internet nao disponivel</string>
    <string name="response_error">Algo deu errado, tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
    <string name="saved_database">Salvo no banco de dados!</string>
    <string name="saved_database_failure">Falha ao salvar no banco de dados!</string>
</resources>