<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electric_car"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/tv_carros"
        app:layout_constraintStart_toEndOf="@+id/tv_carros"
        android:layout_marginLeft="16dp"/>

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_carros"/>

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 300.000,00"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_image"
        app:layout_constraintStart_toEndOf="@id/tv_preco" />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_preco"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 300.000,00"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_preco"
        app:layout_constraintStart_toEndOf="@id/tv_bateria" />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bateria"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kWh"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bateria"
        app:layout_constraintStart_toEndOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_potencia"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_potencia"
        app:layout_constraintStart_toEndOf="@id/tv_recarga" />


</androidx.constraintlayout.widget.ConstraintLayout>